--- a/src/resources/web/api.html
+++ b/src/resources/web/api.html
@@ -385,11 +385,11 @@ Accepts bytes						</code></pre></figure>
 				</li>
 
 				<li class="num">
-					<span class="hd3" id="2.1">/fromWav - POST</span>
+					<span class="hd3" id="2.2">/toMp3 - POST</span>
 					<p>Accepts text and returns .mp3 file from it</p>
 					<p class="role">Role = 1</p>
 					<figure>
-						<figcaption>Accepts bytes</figcaption>
+						<figcaption>Accepts post body</figcaption>
 						<pre><code class="language-json">
 {  
 	"TEXT": "str"
