audio upload and play

--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cheese Application</title>
+    <title>Karla</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ROOT STYLES -->
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/color.css">
+    <link rel="stylesheet" href="styles/circleStyle.css">
 </head>
 <body>
 
-<h1>Welcome to Dairy Development</h1>
-<h2>Everything seems good :)</h2>
-<p>You are reading this page and that's great because it means that your Cheese Application is configured right.</p>
-<p>Thank you for using Cheese Framework.</p>
+<!-- EXTERNAL SCRIPTS -->
+<script src="https://kubaboi.github.io/CheeseFramework/public/scripts/cheese.js"></script>
+
+<script src="scripts/start.js"></script>
+<script src="scripts/recorder.js"></script>
+
+<h1>Karla</h1>
+
+<div class="circle"></div>
+
+<audio id="player">
+</audio>
 
 </body>
 </html>
