--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/color.css">
     <link rel="stylesheet" href="styles/circleStyle.css">
+
+    <link rel="icon" href="images/carlaIcon.png" type="image/x-icon">
 </head>
 <body>
 
@@ -18,10 +20,7 @@
 
 <h1>Karla</h1>
 
-<div class="circle"></div>
-
-<audio id="player">
-</audio>
+<div class="circle" id="circle"></div>
 
 </body>
 </html>
