--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,10 @@
 <script src="scripts/recorder.js"></script>
 
 <h1>Karla</h1>
+<p>Hello, my name is Karla and I am voice assistant</p>
+<p>If you want to start talking to me just say "Hello Karla" or "Hey Karla" :)</p>
+<p>I am able to set a timer for you, but I won't tell you when it is done. But you can ask me "What is the weather" ;)</p>
+<p>Please talk to me with overboosted english accent.</p>
 
 <div class="circle" id="circle"></div>
 
